--- a/Regular Expression Python.ipynb
+++ b/Regular Expression Python.ipynb
@@ -411,7 +411,13 @@
     "\n",
     "$     - End of a String\n",
     "\n",
-    "[]    - between the square brackets what ever character you write will be matched"
+    "[]    - between the square brackets what ever character you write will be matched\n",
+    "\n",
+    "[^ ]  - Match character not in brackets\n",
+    "\n",
+    "|     - Either Or\n",
+    "\n",
+    "( )   - Group"
    ]
   },
   {
@@ -583,11 +589,313 @@
     }
    ],
    "source": [
-    "pattern = re.compile(r'\\d\\d\\d[-.]\\d\\d\\d[-.]\\d\\d\\d\\d')#. matches anything\n",
+    "pattern = re.compile(r'\\d\\d\\d[-.]\\d\\d\\d[-.]\\d\\d\\d\\d')# [] matches whatever is inside it . is not special not A-Z a-z 0-9\n",
+    "#- is pecial chater which specify range and character\n",
     "matches = pattern.finditer(text_to_search)\n",
     "\n",
     "for match in matches:\n",
     "    print(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 1), match='\\n'>\n",
+      "<re.Match object; span=(27, 28), match='\\n'>\n",
+      "<re.Match object; span=(54, 55), match='\\n'>\n",
+      "<re.Match object; span=(55, 56), match='1'>\n",
+      "<re.Match object; span=(56, 57), match='2'>\n",
+      "<re.Match object; span=(57, 58), match='3'>\n",
+      "<re.Match object; span=(58, 59), match='4'>\n",
+      "<re.Match object; span=(59, 60), match='5'>\n",
+      "<re.Match object; span=(60, 61), match='6'>\n",
+      "<re.Match object; span=(61, 62), match='7'>\n",
+      "<re.Match object; span=(62, 63), match='8'>\n",
+      "<re.Match object; span=(63, 64), match='9'>\n",
+      "<re.Match object; span=(64, 65), match='0'>\n",
+      "<re.Match object; span=(65, 66), match='\\n'>\n",
+      "<re.Match object; span=(66, 67), match='\\n'>\n",
+      "<re.Match object; span=(69, 70), match=' '>\n",
+      "<re.Match object; span=(74, 75), match=' '>\n",
+      "<re.Match object; span=(81, 82), match='\\n'>\n",
+      "<re.Match object; span=(82, 83), match='\\n'>\n",
+      "<re.Match object; span=(97, 98), match=' '>\n",
+      "<re.Match object; span=(98, 99), match='('>\n",
+      "<re.Match object; span=(103, 104), match=' '>\n",
+      "<re.Match object; span=(106, 107), match=' '>\n",
+      "<re.Match object; span=(109, 110), match=' '>\n",
+      "<re.Match object; span=(117, 118), match=')'>\n",
+      "<re.Match object; span=(118, 119), match=':'>\n",
+      "<re.Match object; span=(119, 120), match='\\n'>\n",
+      "<re.Match object; span=(120, 121), match='.'>\n",
+      "<re.Match object; span=(121, 122), match=' '>\n",
+      "<re.Match object; span=(122, 123), match='^'>\n",
+      "<re.Match object; span=(123, 124), match=' '>\n",
+      "<re.Match object; span=(124, 125), match='$'>\n",
+      "<re.Match object; span=(125, 126), match=' '>\n",
+      "<re.Match object; span=(126, 127), match='*'>\n",
+      "<re.Match object; span=(127, 128), match=' '>\n",
+      "<re.Match object; span=(128, 129), match='+'>\n",
+      "<re.Match object; span=(129, 130), match=' '>\n",
+      "<re.Match object; span=(130, 131), match='?'>\n",
+      "<re.Match object; span=(131, 132), match=' '>\n",
+      "<re.Match object; span=(132, 133), match='{'>\n",
+      "<re.Match object; span=(133, 134), match=' '>\n",
+      "<re.Match object; span=(134, 135), match='}'>\n",
+      "<re.Match object; span=(135, 136), match=' '>\n",
+      "<re.Match object; span=(136, 137), match='['>\n",
+      "<re.Match object; span=(137, 138), match=' '>\n",
+      "<re.Match object; span=(138, 139), match=']'>\n",
+      "<re.Match object; span=(139, 140), match=' '>\n",
+      "<re.Match object; span=(140, 141), match='\\\\'>\n",
+      "<re.Match object; span=(141, 142), match=' '>\n",
+      "<re.Match object; span=(142, 143), match='|'>\n",
+      "<re.Match object; span=(143, 144), match=' '>\n",
+      "<re.Match object; span=(144, 145), match='('>\n",
+      "<re.Match object; span=(145, 146), match=' '>\n",
+      "<re.Match object; span=(146, 147), match=')'>\n",
+      "<re.Match object; span=(147, 148), match='\\n'>\n",
+      "<re.Match object; span=(148, 149), match='\\n'>\n",
+      "<re.Match object; span=(156, 157), match='.'>\n",
+      "<re.Match object; span=(160, 161), match='\\n'>\n",
+      "<re.Match object; span=(161, 162), match='\\n'>\n",
+      "<re.Match object; span=(162, 163), match='3'>\n",
+      "<re.Match object; span=(163, 164), match='2'>\n",
+      "<re.Match object; span=(164, 165), match='1'>\n",
+      "<re.Match object; span=(165, 166), match='-'>\n",
+      "<re.Match object; span=(166, 167), match='5'>\n",
+      "<re.Match object; span=(167, 168), match='5'>\n",
+      "<re.Match object; span=(168, 169), match='5'>\n",
+      "<re.Match object; span=(169, 170), match='-'>\n",
+      "<re.Match object; span=(170, 171), match='4'>\n",
+      "<re.Match object; span=(171, 172), match='3'>\n",
+      "<re.Match object; span=(172, 173), match='2'>\n",
+      "<re.Match object; span=(173, 174), match='1'>\n",
+      "<re.Match object; span=(174, 175), match='\\n'>\n",
+      "<re.Match object; span=(175, 176), match='1'>\n",
+      "<re.Match object; span=(176, 177), match='2'>\n",
+      "<re.Match object; span=(177, 178), match='3'>\n",
+      "<re.Match object; span=(178, 179), match='.'>\n",
+      "<re.Match object; span=(179, 180), match='5'>\n",
+      "<re.Match object; span=(180, 181), match='5'>\n",
+      "<re.Match object; span=(181, 182), match='5'>\n",
+      "<re.Match object; span=(182, 183), match='.'>\n",
+      "<re.Match object; span=(183, 184), match='1'>\n",
+      "<re.Match object; span=(184, 185), match='2'>\n",
+      "<re.Match object; span=(185, 186), match='3'>\n",
+      "<re.Match object; span=(186, 187), match='4'>\n",
+      "<re.Match object; span=(187, 188), match='\\n'>\n",
+      "<re.Match object; span=(188, 189), match='1'>\n",
+      "<re.Match object; span=(189, 190), match='2'>\n",
+      "<re.Match object; span=(190, 191), match='3'>\n",
+      "<re.Match object; span=(191, 192), match='*'>\n",
+      "<re.Match object; span=(192, 193), match='5'>\n",
+      "<re.Match object; span=(193, 194), match='5'>\n",
+      "<re.Match object; span=(194, 195), match='5'>\n",
+      "<re.Match object; span=(195, 196), match='*'>\n",
+      "<re.Match object; span=(196, 197), match='1'>\n",
+      "<re.Match object; span=(197, 198), match='2'>\n",
+      "<re.Match object; span=(198, 199), match='3'>\n",
+      "<re.Match object; span=(199, 200), match='4'>\n",
+      "<re.Match object; span=(200, 201), match='\\n'>\n",
+      "<re.Match object; span=(201, 202), match='\\n'>\n",
+      "<re.Match object; span=(202, 203), match='\\n'>\n",
+      "<re.Match object; span=(205, 206), match='.'>\n",
+      "<re.Match object; span=(206, 207), match=' '>\n",
+      "<re.Match object; span=(214, 215), match='\\n'>\n",
+      "<re.Match object; span=(217, 218), match=' '>\n",
+      "<re.Match object; span=(223, 224), match='\\n'>\n",
+      "<re.Match object; span=(226, 227), match=' '>\n",
+      "<re.Match object; span=(232, 233), match='\\n'>\n",
+      "<re.Match object; span=(236, 237), match='.'>\n",
+      "<re.Match object; span=(237, 238), match=' '>\n",
+      "<re.Match object; span=(246, 247), match='\\n'>\n",
+      "<re.Match object; span=(249, 250), match='.'>\n",
+      "<re.Match object; span=(250, 251), match=' '>\n",
+      "<re.Match object; span=(252, 253), match='\\n'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(r'[^a-zA-Z]')# #here ^ specify ^ not this character \n",
+    "matches = pattern.finditer(text_to_search)\n",
+    "for match in matches:\n",
+    "    print(match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Quantifiers\n",
+    "*     - 0 or more\n",
+    "\n",
+    "+     - 1 or more\n",
+    "\n",
+    "?     - 0 or 1\n",
+    "\n",
+    "{3}   - Exact Number\n",
+    "\n",
+    "{3,4} - Range of numbers want not match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(162, 174), match='321-555-4321'>\n",
+      "<re.Match object; span=(175, 187), match='123.555.1234'>\n",
+      "<re.Match object; span=(188, 200), match='123*555*1234'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(r'\\d{3}.\\d{3}.\\d{4}')\n",
+    "matches = pattern.finditer(text_to_search)\n",
+    "for match in matches:\n",
+    "    print(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(203, 214), match='Mr. Schafer'>\n",
+      "<re.Match object; span=(215, 223), match='Mr Smith'>\n",
+      "<re.Match object; span=(247, 252), match='Mr. T'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(r'Mr\\.?\\s[a-zA-Z]*') \n",
+    "matches = pattern.finditer(text_to_search)\n",
+    "for match in matches:\n",
+    "    print(match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now Mr, Mr. can be matched but not Mrs, Ms, Ms. for that we use group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(203, 214), match='Mr. Schafer'>\n",
+      "<re.Match object; span=(215, 223), match='Mr Smith'>\n",
+      "<re.Match object; span=(224, 232), match='Ms Davis'>\n",
+      "<re.Match object; span=(233, 246), match='Mrs. Robinson'>\n",
+      "<re.Match object; span=(247, 252), match='Mr. T'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(r'M(r|s|rs)\\.?\\s[a-zA-Z]*') \n",
+    "matches = pattern.finditer(text_to_search)\n",
+    "for match in matches:\n",
+    "    print(match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of email set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emails = '''\n",
+    "vcdshvfjavbjdca@gbdsj.com\n",
+    "dcsajcuhx.advausvd@bdcskj.edu\n",
+    "vdjqhvbdc.wdcx-csdcsd@bvf-cdncj.net\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(1, 26), match='vcdshvfjavbjdca@gbdsj.com'>\n",
+      "<re.Match object; span=(27, 56), match='dcsajcuhx.advausvd@bdcskj.edu'>\n",
+      "<re.Match object; span=(57, 92), match='vdjqhvbdc.wdcx-csdcsd@bvf-cdncj.net'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(r'[a-zA-Z.-]+@[A-Za-z-]+\\.(com|net|edu)')\n",
+    "\n",
+    "matches = pattern.finditer(emails)\n",
+    "for match in matches:\n",
+    "    print(match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".findall  - ablicable for groups only if not group present then it will return only the answer not object\n",
+    "\n",
+    ".match    - this return the match string not the iterable\n",
+    "\n",
+    ".search   - works similar to .match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 5), match='Start'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(r'start',re.IGNORECASE)\n",
+    "matches = pattern.finditer(sentence)\n",
+    "\n",
+    "for i in matches:\n",
+    "    print(i)"
    ]
   },
   {
